vemo-app/main/default/objects/ReconciliationDetail__c/ReconciliationDetail__c.object-meta.xml
<CustomObject>
    <label>ReconciliationDetail</label>
    <nameField>
        <displayFormat>RD-{YYYY}{MM}{DD}{0}</displayFormat>
        <label>ReconciliationDetail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ReconciliationDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>