vemo-app/main/default/objects/ReconciliationDetail__c/fields/EmployerEndDate__c.field-meta.xml
<CustomField>
    <fullName>EmployerEndDate__c</fullName>
    <label>Employer End Date</label>
    <type>Date</type>
</CustomField>