vemo-app/main/default/objects/ReconciliationDetail__c/fields/EmployerStartDate__c.field-meta.xml
<CustomField>
    <fullName>EmployerStartDate__c</fullName>
    <label>Employer Start Date</label>
    <type>Date</type>
</CustomField>