vemo-app/main/default/objects/ReconciliationDetail__c/fields/NonUSTaxincome__c.field-meta.xml
<CustomField>
    <fullName>NonUSTaxincome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non US Tax income</label>
    <type>Checkbox</type>
</CustomField>