vemo-app/main/default/objects/ReconciliationDetail__c/fields/Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation__c</fullName>
    <label>Reconciliation</label>
    <referenceTo>Reconciliation__c</referenceTo>
    <relationshipLabel>ReconciliationDetail</relationshipLabel>
    <relationshipName>ReconciliationDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>