vemo-app/main/default/objects/ReconciliationDetail__c/fields/USTaxincome__c.field-meta.xml
<CustomField>
    <fullName>USTaxincome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US Tax income</label>
    <type>Checkbox</type>
</CustomField>